# py-openbsd-pledge

./: LICENSE  pledge.c  pyproject.toml  setup.py  tests.py
pledge/: __init__.py
tests/: test_pledge.py
